Moved youtuble-dl.exe to Solution dir for copying to output dir. Removes slashes from Masterlist name.

--- a/YoutubeDownlist/YoutubeDownlist.csproj
+++ b/YoutubeDownlist/YoutubeDownlist.csproj
@@ -132,6 +132,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="youtube-dl.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy $(SolutionDir)youtube-dl.exe $(TargetDir) /D /Y
